--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "uuid": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
